# LoCast

./: .gitignore  app.json  eas.json  go.mod  go.sum  index.html  package.json  pnpm-lock.yaml  pwa-assets.config.ts  tailwind.config.js  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1731725916944-bcb31c95f7fe2.mjs
Core.xcframework/ios-arm64/Core.framework/: Core
Core.xcframework/ios-arm64/Core.framework/Headers/: Youcast.objc.h
Core.xcframework/ios-arm64_x86_64-simulator/Core.framework/: Info.plist
Core.xcframework/ios-arm64_x86_64-simulator/Core.framework/Headers/: Core.h
Core.xcframework/ios-arm64_x86_64-simulator/Core.framework/Modules/: module.modulemap
YouCast/: ContentView.swift  Info.plist  Item.swift  YouCast.entitlements  YouCastApp.swift
YouCast.xcodeproj/: project.pbxproj
YouCast.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
YouCast.xcodeproj/xcuserdata/ayodeji.xcuserdatad/xcschemes/: xcschememanagement.plist
YouCast/Assets.xcassets/AppIcon.appiconset/: Contents.json
YouCast/Components/: ImportVideoAndPlaylist.swift  LinkPreviewSheet.swift
YouCast/Core/: Core.swift  Utils.swift
YouCast/Core.xcframework/ios-arm64/Core.framework/: Core  Info.plist
YouCast/Core.xcframework/ios-arm64_x86_64-simulator/Core.framework/: Info.plist
YouCast/Core.xcframework/ios-arm64_x86_64-simulator/Core.framework/Headers/: Core.h  Core.objc.h
YouCast/Extensions/: UIImage+Extension.swift  URL+Extension.swift
YouCast/Lib/: Core.swift  Database.swift  Logger.swift  Queue.swift  Utils.swift
YouCast/Models/: Collection.swift  Entry.swift
YouCast/Shared.xcframework/ios-arm64/Shared.framework/: Info.plist
YouCast/Shared.xcframework/ios-arm64/Shared.framework/Headers/: Core.objc.h  Shared.h
YouCast/Shared.xcframework/ios-arm64_x86_64-simulator/Shared.framework/: Info.plist
YouCast/Shared.xcframework/ios-arm64_x86_64-simulator/Shared.framework/Headers/: Core.objc.h  List.objc.h
YouCast/Shared.xcframework/ios-arm64_x86_64-simulator/Shared.framework/Modules/: module.modulemap
YouCast/Theme/: Fonts.swift
YouCast/Theme/Styles/: FullWidthButton.swift
YouCast/ViewModel/: HomeViewModel.swift
YouCast/ViewModels/: HomeViewModel.swift  ImportViewModel.swift  SettingsViewModel.swift
YouCast/Views/: Downloads.swift  Home.swift  Root.swift  Search.swift  Settings.swift
app/(tabs)/: _layout.tsx  explore.tsx  index.tsx
core/: .mise.toml  core.go  go.mod  go.sum  meta.go  youcast.go
core/list/: format.go  playlist_entry.go  thumbnail.go
src/: App.tsx  PWABadge.tsx  app.tsx  index.css  routeTree.gen.ts
src-tauri/: Cargo.toml  cspell.config.yml  tauri.conf.json
src-tauri/.cspell/: dictionary.txt
src-tauri/capabilities/: default.json  prevent-default.json
src-tauri/icons/: icon.icns
src-tauri/src/: database.rs  lib.rs  main.rs  types.rs
src-tauri/src/cache/: mod.rs
src-tauri/src/database/: migrations.rs  mod.rs
src-tauri/src/jobs/: commands.rs  manager.rs  mod.rs  types.rs
src-tauri/src/jobs/actions/: action.rs  mod.rs  video.rs
src-tauri/src/queries/: author.rs  item.rs  job.rs  mod.rs  types.rs
src-tauri/src/sources/: types.rs  youtube.rs
src/components/: layout.tsx  show.tsx  yt-import-modal.tsx
src/components/layout/: drag-bar.tsx  header.tsx  index.tsx  sidebar.tsx  tab-bar.tsx  tabbar.tsx  top-bar.tsx
src/components/yt-import/: form.tsx  index.tsx  overview.tsx
src/lib/: bindings.ts  error.ts
src/lib/sources/: youtube.ts
src/lib/stores/: app.ts  import.ts
src/lib/tauri/: commands.ts  index.ts  types.ts
src/routes/: __root.tsx  index.lazy.tsx  settings.lazy.tsx
ui/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
ui/src/: PWABadge.tsx  app.tsx  index.css  main.tsx  routeTree.gen.ts
ui/src/components/: layout.tsx  yt-import-modal.tsx
ui/src/lib/database/: index.ts  migrator.ts  provider.ts  worker.js
ui/src/lib/sources/: youtube.ts
ui/src/routes/: preview.lazy.tsx
