[profile.dev.package.sqlx-macros]
opt-level = 3

[package]
name = "locast"
version = "0.1.0"
description = "A Tauri App"
authors = ["Ayodeji O. <ayodeji@keystroke.tools>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "locast_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc.15", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusty_ytdl = { version = "0.7.4", features = ["ffmpeg"] }
tauri-plugin-prevent-default = "0.7.3"
tauri-plugin-log = "2"
log = "0.4.22"
specta = "=2.0.0-rc.20"
specta-typescript = "0.0.7"
tauri-specta = { version = "=2.0.0-rc.20", features = ["derive", "typescript"] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
nanoid = "0.4.0"
sqlx = { version = "0.8.2", features = [
  "sqlite",
  "runtime-tokio",
  "chrono",
  "json",
] }
tokio = { version = "1.41.0", features = ["full"] }
chrono = { version = "0.4.38", features = ["serde"] }
anyhow = "1.0.91"


[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.26"
