
[package]
name = "locast"
version = "0.1.0"
description = "A Tauri App"
authors = ["Ayodeji O. <ayodeji@keystroke.tools>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "locast_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.1.1", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusty_ytdl = { version = "0.7.4", features = ["ffmpeg"] }
tauri-plugin-prevent-default = "0.7.5"
tauri-plugin-log = "2"
log = "0.4.22"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
nanoid = "0.4.0"
sqlx = { version = "0.8.2", features = [
  "sqlite",
  "runtime-tokio",
  "chrono",
  "json",
] }
tokio = { version = "1.41.1", features = ["full"] }
chrono = { version = "0.4.38", features = ["serde"] }
anyhow = "1.0.93"
tauri-plugin-clipboard-manager = "2.0.2"
specta = { version = "1.0.5", features = ["chrono", "export"] }
thiserror = "2.0.3"
lazy_static = "1.5.0"
